--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
