--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>GDSC DJSCE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
