--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <title>GDSC DJSCE</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
